--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -5,4 +6,169 @@
 
 body {
   margin: 10px;
+}
+
+h1, h2, h3 {
+  font-family: "Red Hat Display";
+  text-align: center;
+}
+
+h1 {
+  font-size: 48px;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+h3 {
+  font-size: 18px;
+}
+
+#main-row {
+  gap: 50px;
+  height: 500px;
+}
+
+.row {
+  display: flex;
+  flex: 1;
+}
+
+.col {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+#code-container, #code-squares {
+  border: 1px solid #000;
+  list-style: none;
+  background-color: #1d1e22;
+  font-family: "Source Code Pro", monospace;
+  padding: 10px;
+  overflow-y: scroll;
+}
+
+#code-container li, #code-squares li {
+  height: 2em;
+}
+
+.marker {
+  width: 25px;
+  display: inline-block;
+  color: #343638;
+  text-align: right;
+  margin-right: 15px;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */ /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently  supported by Chrome, Edge, Opera and Firefox */
+}
+
+.selector {
+  color: #dcbe55;
+}
+
+.white {
+  color: #ffffff;
+}
+
+.property {
+  display: inline-block;
+  text-indent: 15px;
+  color: #987d88;
+}
+
+.property-value {
+  color: #dac264;
+}
+
+.comment {
+  color: #669352;
+}
+
+input[type=text], select {
+  background: #1b1c1f;
+  border: 1px solid #fff;
+  outline: none;
+  font-family: "Source Code Pro", monospace;
+  font-size: 16px;
+  color: #dac264;
+  padding-right: 5px;
+}
+
+input[type=text] {
+  width: 50px;
+  text-align: right;
+}
+
+#settings-container {
+  display: flex;
+  border: 1px solid #000;
+  flex: 1;
+}
+
+#playground-outer-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #000;
+  flex: 1;
+}
+
+#playground-container {
+  display: flex;
+  overflow: hidden;
+  border: 1px solid red;
+  height: 100%;
+  width: 100%;
+}
+
+.square {
+  width: 100px;
+  height: 100px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+#r-square {
+  background-image: url("img/r-face.svg");
+  background-color: #d35f5f;
+}
+
+#g-square {
+  background-image: url("img/g-face.svg");
+  background-color: #8dd35f;
+}
+
+#b-square {
+  background-image: url("img/b-face.svg");
+  background-color: #5599ff;
+}
+
+#playground-width-slider {
+  margin-left: 25px;
+  -webkit-appearance: none;
+  border-radius: 5px;
+  background: #ccc;
+  outline: none;
+  -ms-writing-mode: bt-lr;
+      writing-mode: bt-lr; /* IE */
+  -webkit-appearance: slider-horizontal; /* WebKit */
+  height: 25px;
+}
+
+#playground-height-slider {
+  direction: rtl;
+  -webkit-appearance: none;
+  border-radius: 5px;
+  background: #ccc;
+  outline: none;
+  -ms-writing-mode: bt-lr;
+      writing-mode: bt-lr; /* IE */
+  -webkit-appearance: slider-vertical; /* WebKit */
+  width: 25px;
 }/*# sourceMappingURL=style.css.map */
