--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,21 @@
 // Variables
-$font : 
+$title-font: 'Red Hat Display';
+$h1-size: 48px;
+$h2-size: 24px;
+$h3-size: 18px;
+$border: 1px solid #000;
+$red: #d35f5f;
+$green: #8dd35f;
+$blue: #5599ff;
+$code-bg-color: #1d1e22;
+$selector-color: #dcbe55;
+$property-color: #987d88;
+$property-value-color: #dac264;
+$comment-color: #669352;
+
+
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+
 
 // Reset
 
@@ -12,6 +28,166 @@ body{
     margin: 10px;
 }
 
-h1{
+h1, h2, h3{
+    font-family: $title-font;
+    text-align: center;
+}
 
+h1{
+    font-size: $h1-size;
+}
+
+h2{
+    font-size: $h2-size;
+}
+
+h3{
+    font-size: $h3-size;
+}
+
+#main-row{
+    gap: 50px;
+    height: 500px;
+}
+
+.row{
+    display: flex;
+    flex: 1;
+}
+
+.col{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+#code-container, #code-squares{
+    border: $border;
+    list-style: none;
+    background-color: $code-bg-color;
+    font-family: 'Source Code Pro', monospace;  
+    padding: 10px;
+    overflow-y: scroll;
+}
+
+#code-container li, #code-squares li{
+    height: 2em;
+}
+
+.marker{
+    width: 25px;
+    display: inline-block;
+    color: #343638;
+    text-align: right;
+    margin-right: 15px;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently  supported by Chrome, Edge, Opera and Firefox */
+}
+
+.selector{
+    color: $selector-color;
+}
+
+.white{
+    color: #ffffff;
+}
+
+.property{
+    display: inline-block;
+    text-indent: 15px;
+    color: $property-color;
+}
+
+.property-value{
+    color: $property-value-color;
+}
+
+.comment{
+    color: $comment-color;
+}
+
+input[type=text], select{
+    background: darken($color: $code-bg-color, $amount: 1);
+    border: 1px solid #fff;
+    outline: none;
+    font-family: 'Source Code Pro', monospace;
+    font-size: 16px;
+    color: $property-value-color;
+    padding-right: 5px;
+}
+
+input[type=text]{
+    width: 50px;
+    text-align: right;
+}
+
+#settings-container{
+    display: flex;
+    border: $border;
+    flex: 1;
+}
+
+#playground-outer-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: $border;
+    flex: 1;
+}
+
+#playground-container{
+    display: flex;
+    overflow: hidden;
+    border: 1px solid red;
+    height: 100%;
+    width: 100%;
+}
+
+.square{
+    width: 100px;
+    height: 100px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+
+#r-square{
+    background-image: url('img/r-face.svg');
+    background-color: $red;
+}
+
+#g-square{
+    background-image: url('img/g-face.svg');
+    background-color: $green;
+}
+
+#b-square{
+    background-image: url('img/b-face.svg');
+    background-color: $blue;
+}
+
+#playground-width-slider{
+    margin-left: 25px;
+    -webkit-appearance: none;
+    border-radius: 5px;
+    background: #ccc;
+    outline: none;
+    writing-mode: bt-lr; /* IE */
+    -webkit-appearance: slider-horizontal; /* WebKit */
+    height: 25px;
+}
+
+#playground-height-slider{
+    direction: rtl;
+    -webkit-appearance: none;
+    border-radius: 5px;
+    background: #ccc;
+    outline: none;
+    writing-mode: bt-lr; /* IE */
+    -webkit-appearance: slider-vertical; /* WebKit */
+    width: 25px;
 }
