--- a/style.scss
+++ b/style.scss
@@ -47,7 +47,6 @@ h3{
 
 #main-row{
     gap: 50px;
-    height: 500px;
 }
 
 .row{
@@ -61,17 +60,19 @@ h3{
     flex: 1;
 }
 
-#code-container, #code-squares{
+#code-container{
     border: $border;
     list-style: none;
     background-color: $code-bg-color;
     font-family: 'Source Code Pro', monospace;  
     padding: 10px;
     overflow-y: scroll;
+    height: 500px;
 }
 
-#code-container li, #code-squares li{
+#code-container li{
     height: 2em;
+    white-space: nowrap;
 }
 
 .marker{
@@ -107,7 +108,9 @@ h3{
 }
 
 .comment{
+    display: inline-block;
     color: $comment-color;
+    text-indent: 15px;
 }
 
 input[type=text], select{
@@ -125,6 +128,11 @@ input[type=text]{
     text-align: right;
 }
 
+input:disabled{
+    color: #343638;
+    text-decoration: line-through;
+}
+
 #settings-container{
     display: flex;
     border: $border;
@@ -137,6 +145,7 @@ input[type=text]{
     align-items: center;
     border: $border;
     flex: 1;
+    height: 500px;
 }
 
 #playground-container{
