--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 }
 
 body {
-  margin: 10px;
+  background-color: #bec0c9;
+  padding: 25px;
 }
 
 h1, h2, h3 {
@@ -15,18 +16,19 @@ h1, h2, h3 {
 
 h1 {
   font-size: 48px;
+  line-height: 1em;
 }
 
 h2 {
   font-size: 24px;
+  margin-bottom: 25px;
 }
 
 h3 {
   font-size: 18px;
-}
-
-#main-row {
-  gap: 50px;
+  padding: 15px;
+  color: #bec0c9;
+  font-weight: normal;
 }
 
 .row {
@@ -40,6 +42,15 @@ h3 {
   flex: 1;
 }
 
+#main-row {
+  gap: 25px;
+}
+
+#main-row .col {
+  background-color: rgb(11, 14, 19);
+  border: 1px solid #000;
+}
+
 #code-container {
   border: 1px solid #000;
   list-style: none;
@@ -47,7 +58,7 @@ h3 {
   font-family: "Source Code Pro", monospace;
   padding: 10px;
   overflow-y: scroll;
-  height: 500px;
+  height: 400px;
 }
 
 #code-container li {
@@ -73,7 +84,7 @@ h3 {
 }
 
 .white {
-  color: #ffffff;
+  color: #fff;
 }
 
 .property {
@@ -112,27 +123,28 @@ input:disabled {
   text-decoration: line-through;
 }
 
-#settings-container {
-  display: flex;
-  border: 1px solid #000;
-  flex: 1;
-}
-
 #playground-outer-container {
   display: flex;
   justify-content: center;
   align-items: center;
   border: 1px solid #000;
   flex: 1;
-  height: 500px;
+  height: 400px;
+  background-size: 20px 20px;
+  background-position: center;
+  background-image: linear-gradient(to right, rgb(99, 99, 99) 1px, transparent 1px), linear-gradient(to bottom, rgb(99, 99, 99) 1px, transparent 1px);
+  background-color: #1d1e22;
+  margin-right: 25px;
 }
 
 #playground-container {
   display: flex;
   overflow: hidden;
-  border: 1px solid red;
+  border: 1px solid rgb(251, 255, 0);
+  background-color: rgba(251, 255, 0, 0.08);
   height: 100%;
   width: 100%;
+  position: relative;
 }
 
 .square {
@@ -159,25 +171,38 @@ input:disabled {
 }
 
 #playground-width-slider {
-  margin-left: 25px;
-  -webkit-appearance: none;
-  border-radius: 5px;
-  background: #ccc;
+  margin: 15px 25px 15px 35px;
+  height: 5px;
   outline: none;
-  -ms-writing-mode: bt-lr;
-      writing-mode: bt-lr; /* IE */
-  -webkit-appearance: slider-horizontal; /* WebKit */
-  height: 25px;
 }
 
 #playground-height-slider {
-  direction: rtl;
-  -webkit-appearance: none;
-  border-radius: 5px;
-  background: #ccc;
-  outline: none;
   -ms-writing-mode: bt-lr;
-      writing-mode: bt-lr; /* IE */
-  -webkit-appearance: slider-vertical; /* WebKit */
-  width: 25px;
+      writing-mode: bt-lr;
+  -webkit-appearance: slider-vertical;
+  width: 5px;
+  margin: 0px 15px;
+  outline: none;
+}
+
+footer {
+  font-family: "Red Hat Display";
+  margin-top: 20px;
+  text-align: right;
+}
+
+footer a {
+  text-decoration: none;
+  color: #bd1878;
+}
+
+footer a:hover {
+  color: #e32594;
+}
+
+@media only screen and (max-width: 1024px) {
+  #main-row {
+    display: flex;
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=style.css.map */
