--- a/style.scss
+++ b/style.scss
@@ -1,31 +1,34 @@
-// Variables
+// Fonts
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 $title-font: 'Red Hat Display';
-$h1-size: 48px;
-$h2-size: 24px;
-$h3-size: 18px;
-$border: 1px solid #000;
+
+// Colors
 $red: #d35f5f;
 $green: #8dd35f;
 $blue: #5599ff;
-$code-bg-color: #1d1e22;
+$body-bg-color: #bec0c9;
+$col-title-color: $body-bg-color;
+$col-bg-color: #1d1e22;
+$marker-color: #343638;
+$disabled-color: $marker-color;
 $selector-color: #dcbe55;
 $property-color: #987d88;
 $property-value-color: #dac264;
 $comment-color: #669352;
+$link-color: #bd1878;
 
+// Borders
+$black-border: 1px solid #000;
 
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
-
-
-// Reset
-
+// Main
 *{
     padding: 0;
     margin: 0;
 }
 
 body{
-    margin: 10px;
+    background-color: $body-bg-color;
+    padding: 25px;
 }
 
 h1, h2, h3{
@@ -34,19 +37,20 @@ h1, h2, h3{
 }
 
 h1{
-    font-size: $h1-size;
+    font-size: 48px;
+    line-height: 1em;
 }
 
 h2{
-    font-size: $h2-size;
+    font-size: 24px;
+    margin-bottom: 25px;
 }
 
 h3{
-    font-size: $h3-size;
-}
-
-#main-row{
-    gap: 50px;
+    font-size: 18px;
+    padding: 15px;
+    color: $col-title-color;
+    font-weight: normal;
 }
 
 .row{
@@ -60,14 +64,25 @@ h3{
     flex: 1;
 }
 
+// Main row and cols
+#main-row{
+    gap: 25px;
+}
+
+#main-row .col{
+    background-color: rgb(11, 14, 19);
+    border: $black-border;
+}
+
+// Code column
 #code-container{
-    border: $border;
+    border: $black-border;
     list-style: none;
-    background-color: $code-bg-color;
+    background-color: $col-bg-color;
     font-family: 'Source Code Pro', monospace;  
     padding: 10px;
     overflow-y: scroll;
-    height: 500px;
+    height: 400px;
 }
 
 #code-container li{
@@ -78,7 +93,7 @@ h3{
 .marker{
     width: 25px;
     display: inline-block;
-    color: #343638;
+    color: $marker-color;
     text-align: right;
     margin-right: 15px;
     -webkit-touch-callout: none; /* iOS Safari */
@@ -94,7 +109,7 @@ h3{
 }
 
 .white{
-    color: #ffffff;
+    color: #fff;
 }
 
 .property{
@@ -114,7 +129,7 @@ h3{
 }
 
 input[type=text], select{
-    background: darken($color: $code-bg-color, $amount: 1);
+    background: darken($color: $col-bg-color, $amount: 1);
     border: 1px solid #fff;
     outline: none;
     font-family: 'Source Code Pro', monospace;
@@ -129,31 +144,33 @@ input[type=text]{
 }
 
 input:disabled{
-    color: #343638;
+    color: $disabled-color;
     text-decoration: line-through;
 }
 
-#settings-container{
-    display: flex;
-    border: $border;
-    flex: 1;
-}
-
+// Playground
 #playground-outer-container{
     display: flex;
     justify-content: center;
     align-items: center;
-    border: $border;
+    border: $black-border;
     flex: 1;
-    height: 500px;
+    height: 400px;
+    background-size: 20px 20px;
+    background-position: center;
+    background-image: linear-gradient(to right, rgb(99, 99, 99) 1px, transparent 1px), linear-gradient(to bottom, rgb(99, 99, 99) 1px, transparent 1px);
+    background-color: $col-bg-color;
+    margin-right: 25px;
 }
 
 #playground-container{
     display: flex;
     overflow: hidden;
-    border: 1px solid red;
+    border: 1px solid rgb(251, 255, 0);
+    background-color: rgba(251, 255, 0, 0.08);
     height: 100%;
     width: 100%;
+    position: relative;
 }
 
 .square{
@@ -180,23 +197,42 @@ input:disabled{
 }
 
 #playground-width-slider{
-    margin-left: 25px;
-    -webkit-appearance: none;
-    border-radius: 5px;
-    background: #ccc;
+    margin: 15px 25px 15px 35px;
+    height: 5px;
     outline: none;
-    writing-mode: bt-lr; /* IE */
-    -webkit-appearance: slider-horizontal; /* WebKit */
-    height: 25px;
 }
 
 #playground-height-slider{
-    direction: rtl;
-    -webkit-appearance: none;
-    border-radius: 5px;
-    background: #ccc;
+    writing-mode: bt-lr;
+    -webkit-appearance: slider-vertical;
+    width: 5px;
+    margin: 0px 15px;
     outline: none;
-    writing-mode: bt-lr; /* IE */
-    -webkit-appearance: slider-vertical; /* WebKit */
-    width: 25px;
+}
+
+//Footer
+
+footer{
+    font-family: $title-font;
+    margin-top: 20px;
+    text-align: right;
+}
+
+footer a{
+    text-decoration: none;
+    color: $link-color;
+}
+
+footer a:hover{
+    color: lighten($color: $link-color, $amount: 10)
+}
+
+
+
+// Media queries
+@media only screen and (max-width: 1024px) {
+    #main-row{
+        display: flex;
+        flex-direction: column;
+    }
 }
