feat/Add favicon

--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ input:disabled {
 #playground-outer-container {
   display: flex;
   justify-content: center;
+  overflow: hidden;
   align-items: center;
   border: 1px solid #000;
   flex: 1;
@@ -144,7 +145,7 @@ input:disabled {
   background-color: rgba(251, 255, 0, 0.08);
   height: 100%;
   width: 100%;
-  position: relative;
+  box-sizing: border-box;
 }
 
 .square {
