fix/Correct html file after w3 validation

--- a/style.scss
+++ b/style.scss
@@ -236,4 +236,8 @@ footer a:hover{
         display: flex;
         flex-direction: column;
     }
+
+    footer{
+        text-align: center;
+    }
 }
