--- a/style.css
+++ b/style.css
@@ -206,4 +206,7 @@ footer a:hover {
     display: flex;
     flex-direction: column;
   }
+  footer {
+    text-align: center;
+  }
 }/*# sourceMappingURL=style.css.map */
